[package]
name = "database"
version = "0.1.0"
authors = ["btwotwo <10519967+btwotwo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.25"

[dev-dependencies]
tempdir = "0.3.7"
rusty-fork = "0.3.0"
